[gd_scene load_steps=8 format=2]

[ext_resource path="res://props/kameBeam.gd" type="Script" id=1]
[ext_resource path="res://props/beamParticlesAura.tscn" type="PackedScene" id=2]
[ext_resource path="res://props/kameBeam.material" type="Material" id=3]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 0.001
radial_segments = 16
rings = 4

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.192157, 0.733333, 1, 1 )
emission_enabled = true
emission = Color( 0.47451, 0.988235, 1, 1 )
emission_energy = 3.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 3
distance_fade_min_distance = 0.0
distance_fade_max_distance = 10.0

[sub_resource type="SphereMesh" id=3]
radius = 3.0
height = 6.0

[sub_resource type="SphereShape" id=7]
radius = 2.0

[node name="kameBeam" type="Spatial"]
script = ExtResource( 1 )

[node name="beam" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="blast" type="MeshInstance" parent="."]
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="Area" type="Area" parent="blast"]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="blast/Area"]
shape = SubResource( 7 )

[node name="OmniLight" type="OmniLight" parent="blast"]
light_color = Color( 0, 0.929412, 1, 1 )
light_energy = 2.0
shadow_enabled = true

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="beamAuraEffect" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0 )

[node name="OmniLight" parent="beamAuraEffect" index="20"]
light_color = Color( 0, 0.623529, 0.894118, 1 )
light_energy = 5.0
shadow_enabled = true

[node name="selfDestruct" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="body_entered" from="blast/Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="selfDestruct" to="." method="_on_selfDestruct_timeout"]

[editable path="beamAuraEffect"]
